Successful maze rendering